--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -30,8 +30,8 @@ dependencies {
 publish {
     userOrg = 'razerdp'
     groupId = 'com.github.razerdp'
-    artifactId = 'BasePopup'
-    publishVersion = '1.9.2'
+    artifactId = 'BasePopup_Candy'
+    publishVersion = '1.9.2-beta3'
     desc = '打造一个通用的Popup'
     website = 'https://github.com/razerdp/BasePopup'
 }
