--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 publish {
     userOrg = 'razerdp'
     groupId = 'com.github.razerdp'
-    artifactId = 'BasePopup'
+    artifactId = 'BasePopup_Candy'
     publishVersion = '1.9.3'
     desc = '打造一个通用的Popup'
     website = 'https://github.com/razerdp/BasePopup'
